fix: correcionde buf